docs/src/styles/globals.css
/* @biome-ignore */
@import "highlight.js/styles/atom-one-dark.css";
@import "tailwindcss";
@plugin "@tailwindcss/typography";
@plugin "daisyui";
@source "../../node_modules/@jay-js/ui/**/*.styled";
@theme {
	--font-primary: "Noto Sans", "sans-serif";
}	
@plugin "daisyui/theme" {
  name: "light";
  default: true;
  prefersdark: false;
  color-scheme: "light";
  --color-base-100: oklch(100% 0 0);
  --color-base-200: oklch(97% 0 0);
  --color-base-300: oklch(92% 0 0);
  --color-base-content: oklch(20% 0 0);
	--color-primary: #01D7A2;
  --color-primary-content: #1C242D;
  --color-secondary: oklch(65% 0.241 354.308);
  --color-secondary-content: oklch(94% 0.028 342.258);
  --color-accent: oklch(77% 0.152 181.912);
  --color-accent-content: oklch(38% 0.063 188.416);
  --color-neutral: oklch(14% 0.005 285.823);
  --color-neutral-content: oklch(92% 0.004 286.32);
  --color-info: oklch(74% 0.16 232.661);
  --color-info-content: oklch(29% 0.066 243.157);
  --color-success: oklch(76% 0.177 163.223);
  --color-success-content: oklch(37% 0.077 168.94);
  --color-warning: oklch(82% 0.189 84.429);
  --color-warning-content: oklch(41% 0.112 45.904);
  --color-error: oklch(71% 0.194 13.428);
  --color-error-content: oklch(27% 0.105 12.094);
  --radius-selector: 1rem;
  --radius-field: 0.5rem;
  --radius-box: 1rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 1;
  --noise: 0;
}

@plugin "daisyui/theme" {
	name: "dark";
  default: true;
  prefersdark: false;
  color-scheme: "dark";
  
	--color-base-100: oklch(30.857% 0.023 264.149);
  --color-base-200: oklch(28.036% 0.019 264.182);
  --color-base-300: oklch(26.346% 0.018 262.177);
  --color-base-content: oklch(97.807% 0.029 256.847);
  --color-primary: #01D7A2;
  --color-primary-content: #1C242D;
  --color-secondary: oklch(65% 0.241 354.308);
  --color-secondary-content: oklch(94% 0.028 342.258);
  --color-accent: oklch(77% 0.152 181.912);
  --color-accent-content: oklch(38% 0.063 188.416);
  --color-neutral: oklch(14% 0.005 285.823);
  --color-neutral-content: oklch(92% 0.004 286.32);
  --color-info: oklch(74% 0.16 232.661);
  --color-info-content: oklch(29% 0.066 243.157);
  --color-success: oklch(76% 0.177 163.223);
  --color-success-content: oklch(37% 0.077 168.94);
  --color-warning: oklch(82% 0.189 84.429);
  --color-warning-content: oklch(41% 0.112 45.904);
  --color-error: oklch(71% 0.194 13.428);
  --color-error-content: oklch(27% 0.105 12.094);
  --radius-selector: 0.5rem;
  --radius-field: 0.25rem;
  --radius-box: 0.5rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 1;
  --noise: 0;
}

* {
  scrollbar-color: initial !important;
}

html,
body,
div#app {
  @apply w-full h-full scroll-smooth;
}

.prose {
  @apply max-w-none;
}

.prose :where(h2) {
  @apply scroll-mt-28;
}  

.prose :where(pre) {
  @apply bg-[#282c34];
}  


.prose code {
  @apply text-balance
}

.nav-active {
  @apply border-l-primary font-bold;
}

.reading-progress {
  @apply h-[2px] bg-primary/70 fixed top-20 left-0 w-full;
  transform-origin: 0 50%;
  animation: scaleProgress auto linear;
  animation-timeline: scroll(root);
}

@keyframes scaleProgress {
  0% {
    transform: scaleX(0);
  }
  100% {
    transform: scaleX(1);
  }
}

.reading-progress-vertical{
  @apply w-[2px] bg-primary/70 fixed top-32 h-full mx-auto opacity-0;
  transform-origin: 50% 0;
  height: calc(100vh - 30rem);
  animation: scaleProgressVertical auto linear;
  animation-timeline: scroll(root);
}

@keyframes scaleProgressVertical {
  0% {
    opacity: 0;
    transform: scaleY(0);
  }
  10% {
    opacity: 1;
  }
  80% {
    opacity: 1;
  }
  100% {
    opacity: 0;
    transform: scaleY(1);
  }
}


.docs-section-progress {
  @apply w-6 h-6 fixed top-32 bg-base-300/50 rounded-full animate-pulse opacity-0;
  animation: docsSection linear forwards;
  animation-timeline: scroll(root);
}

@keyframes docsSection {
  0% {
    opacity: 0;
  }
  10% {
    opacity: 1;
  }
  80% {
    opacity: 1;
  }
  100% {
    opacity: 0;
    transform: translateY(calc(100vh - 30rem));
  }
}

